quantity-limiter-frontend/k8s/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: __CI_PROJECT_NAME__-service
  namespace: __NAMESPACE__
spec:
  type: ClusterIP
  selector:
    app: __CI_PROJECT_NAME__
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: __CI_PROJECT_NAME__-service-nodeport
  namespace: __NAMESPACE__
spec:
  type: NodePort
  selector:
    app: __CI_PROJECT_NAME__
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30105
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: __CI_PROJECT_NAME__
  namespace: __NAMESPACE__
  labels:
    app: __CI_PROJECT_NAME__
spec:
  replicas: 1 # Có thể điều chỉnh theo môi trường
  selector:
    matchLabels:
      app: __CI_PROJECT_NAME__
  template:
    metadata:
      annotations:
        commit-sha: __CI_COMMIT_SHA__
      labels:
        app: __CI_PROJECT_NAME__
    spec:
      imagePullSecrets:
        - name: __PULL_SECRET_NAME__
      containers:
        - name: __CI_PROJECT_NAME__
          image: __IMAGE__
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: '128Mi'
              cpu: '50m'
            limits:
              memory: '256Mi'
              cpu: '200m'
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: __CI_PROJECT_NAME__-ingress
  namespace: __NAMESPACE__
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: '50m'
    nginx.ingress.kubernetes.io/configuration-snippet: |
      etag on;
      expires 3d;
      add_header Cache-Control "public";
spec:
  ingressClassName: nginx
  rules:
    - host: __INGRESS_DOMAIN__ # Thay thế bằng tên miền thực tế
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: __CI_PROJECT_NAME__-service
                port:
                  number: 80
            path: /
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
    - hosts:
        - __INGRESS_DOMAIN__
      secretName: __CI_PROJECT_NAME__-tls
